# neo4j-uploader

./: .gitignore  LICENSE.txt  README.md  index.html  pyproject.toml  search.js
.github/workflows/: docs.yml
docs/: index.html  neo4j_uploader.html  search.js
docs/neo4j_uploader/: _conversions.html  _logger.html  _n4j.html  _queries.html  _upload_utils.html  errors.html  models.html
neo4j_uploader/: __init__.py  _conversions.py  _dynamic_dict.py  _logger.html  _logger.py  _n4j.py  _queries.py  _queries_relationships.py  _queries_utils.py  _upload_utils.py  conversion.py  errors.py  logger.py  models.py  n4j.py  queries.py  schemas.py  test__queries_utils.py  upload_utils.py
samples/: batch_upload_data.json  upload_data.json
tests/: test_conversion.py  test_conversions.py  test_dynamic_dict.py  test_init.py  test_models.py  test_queries.py  test_queries_relationships.py  test_queries_utils.py  test_schemas.py  test_upload_utils.py
